# jira-kb-sys

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
app/: __init__.py  analysis.py  api.py  cli.py  config.py  confluence.py  crawler.py  demo.py  docs.py  issue_details.py  jira_knowledge.py  management.py  models.py  prompts.py  qa.py  reporting.py  repository.py  ui.py
app/retrieval/: __init__.py  hybrid.py  preprocess.py  query_planner.py  rerank.py  schema.py  tantivy_index.py  vector_index.py
docs/: ARCHITECTURE.md  GAP_ANALYSIS.md  IMPLEMENTATION_AUDIT.md  RUNBOOK.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: DashboardClient.tsx  page.tsx
frontend/app/docs-qa/: DocsQAClient.tsx  page.tsx
frontend/app/issues/: IssuesClient.tsx  page.tsx
frontend/app/jira-docs-qa/: JiraDocsQAClient.tsx  page.tsx
frontend/app/management-summary/: ManagementSummaryClient.tsx  page.tsx
frontend/app/reports/: ReportsClient.tsx  page.tsx
frontend/app/settings/: SettingsClient.tsx  page.tsx
frontend/app/tasks/: TaskCenterClient.tsx  page.tsx
frontend/components/summary/: MetricCard.tsx  (+1 more)
frontend/lib/: api.ts
templates/: management_summary.html  report.html
tests/: test_analysis.py  test_api_routes.py  test_combined_qa.py  test_confluence.py  test_crawler_change_events.py  test_docs.py  test_issue_details.py  test_jira_knowledge.py  test_management_summary.py  test_pdf_normalize.py  test_reporting.py  test_retrieval.py  test_task_queue.py  test_team_filter.py
(+20 files in other folders)
